maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:20: error: identifier expected but '(' found.
def ecrit ((x:Int, y:Int), i:Int) = {
           ^JediEscaper:64: error: ':' expected but '}' found.
}
^